TIP 431 now has an implmentation

--- a/tip/431.md
+++ b/tip/431.md
@@ -1,12 +1,13 @@
 # TIP 431: Add 'tempdir' Subcommand to 'file'
-	Author:		Kevin Pasko <kevin.a.pasko@gmail.com>
-	State:		Draft
-	Type:		Project
-	Tcl-Version:	8.7
-	Vote:		Pending
-	Created:	10-Sep-2014
-	Keywords:	Tcl, directory, file
+	Author:         Kevin Pasko <kevin.a.pasko@gmail.com>
+	State:          Draft
+	Type:           Project
+	Tcl-Version:    8.7
+	Vote:           Pending
+	Created:        10-Sep-2014
+	Keywords:       Tcl, directory, file
 	Post-History:
+	Tcl-Branch:     tip-431
 -----
 
 # Abstract
@@ -30,14 +31,16 @@ temporary directory, with naming convention "<b>tcl\_</b><i>XXXXXX</i>" where ea
 _X_ is a randomly selected character \(following the **file tempfile**
 naming convention\). Successful completion of **file tempdir** shall return
 the absolute path of the created directory, otherwise an error shall be
-thrown.
+thrown. (The number of _X_ characters shall be system specific.)
 
 **file tempdir** shall have an optional argument, _template_, to modify
 the created directory's path and name. The _template_ shall be decomposed
 into \(up to\) two parts: the directory's path and rootname. If either part is
 absent, relevant defaults \(e.g., according to the native operating system\)
 shall be used. The entire temporary name shall then be formed from the path,
-the root, and a generated unique string of \(typically\) six characters. If
+the root, and a generated unique string of \(typically\) six
+characters (eight on Windows, due to case-insensitive filesystems
+reducing the size of portable random alphabet). If
 the directory part of the _template_ is supplied, it should refer to a
 directory on the native filesystem.
 
