Editorial cleanup of TIP 409

--- a/tip/409.md
+++ b/tip/409.md
@@ -43,23 +43,24 @@ preservation and metadata specification.
 
 This TIP asks for UDP-in-the core for two strong reasons:
 
- - it   enables   another   important   core
-   feature:   asynchronous 
-   \(event-driven\) DNS lookups
+ - it enables another important core feature: asynchronous \(event-driven\)
+   DNS lookups
 
  - the C runtime supports it without extra libraries \(unlike USB or 
    Bluetooth\)
 
 We then believe that the ubiquity of the need and the lack of external
-dependencies justify  for UDP the  first-class status that  TCP enjoys
-\(regardless of the channel vs event models\). Note that an acceptable compromise would be a bundled extension, ie distributed-with-the-core \(in "pkgs/"\).
+dependencies justify for UDP the first-class status that TCP enjoys
+\(regardless of the channel vs event models\). Note that an acceptable
+compromise would be a bundled extension, ie distributed-with-the-core \(in
+"pkgs/"\).
 
 # Specification
 
-The new  **udp** ensemble hosts three subcommands: **new**, **create**, and **names**
+The new **udp** ensemble hosts three subcommands: **new**, **create**, and
+**names**
 
- > **udp new** ?_options_?
-
+ > **udp new** ?_options_?  
  > **udp create** _name_ ?_options_?
 
 both create an UDP endpoint ;
@@ -74,27 +75,29 @@ Following the  traditions of  Tk and Snack,  **udp new**  and **udp
 create** return  a Tcl command, which  takes subcommands implementing
 the  needed  verbs.  By analogy  with the  corresponding  TclOO  constructors,
 
- * **new**   generates   the    command   name   internally,   in   the **::tcl::udp** namespace
+ * **new** generates the command name internally, in the **::tcl::udp**
+   namespace
 
- * **create** takes an extra _name_ argument providing the target command name, either fully qualified, or relative to the current namespace.
+ * **create** takes an extra _name_ argument providing the target command
+   name, either fully qualified, or relative to the current namespace.
 
- An UDP endpoint is thus created by:
+An UDP endpoint is thus created by:
 
-		   set u [udp new ...]
+	   set u [udp new ...]
 
 or
 
 	   udp create foo ...
 
- Once created, its configuration can be tweaked by:
+Once created, its configuration can be tweaked by:
 
  >  $u **configure** _-option_ _value_
 
 and retrieved with
 
- >   set value [$u **configure** -_option_]
+ >   set value [$u **configure** _-option_]
 
-or 
+or (to get a dictionary of all readable configuration options):
 
  >   set fullconf [$u **configure**]
 
@@ -112,46 +115,50 @@ or the whole namespace.
 
 Among options, a few may only be specified on creation:
 
- > - local interface\+port
+ - local interface\+port
 
- > - \(optional\) connect\(\) target's address\+port
+ - \(optional\) connect\(\) target's address\+port
 
- > - reuse flag \(described in Advanced Features\)
+ - reuse flag \(described in Advanced Features\)
 
-while all the  other options may be specified  _both_ on creation or
-through [$u configure].
+while all the other options may be specified _both_ on creation or through
+[_$u_ **configure**].
 
 ## Addresses and Ports
 
 The first two creation-only options have the following syntax:
 
- > set u [**udp new** ?**-local** _address_port_? ]
-
+ > set u [**udp new** ?**-local** _address_port_? ]  
  > set u [**udp new** ?**-remote** _address_port_? ]
 
 where _address\_port_ pairs are represented as 2-element Tcl lists.
 
  > set address\_port [list $address $port]
 
-Addresses can be  given either as numeric IP \(v4  or v6\) addresses, or
-as  hostnames; in  the latter  case, a  synchronous DNS  resolution is
-performed before actual use, just like for **socket**.
+Addresses can be given either as numeric IP \(v4 or v6\) addresses, or as
+hostnames; in the latter case, a synchronous DNS resolution is performed
+before actual use, just like for **socket**.
 
 In the case of **-local**, $address can be specified as "\*", meaning
-INADDR\_ANY, and  $port can be  0, asking for  the OS to select  a free
-port. Thus a dynamic port on all interfaces can be requested with
+INADDR\_ANY, and $port can be 0, asking for the OS to select a free port. Thus
+a dynamic port on all interfaces can be requested with
 
 	   set u [udp new -local [list * 0]]
 
-In case of port 0, after creation of the endpoint, the actual port
-chosen by the OS can be retrieved with [$u configure]:
+In case of port 0, after creation of the endpoint, the actual port chosen by
+the OS can be retrieved with [$u configure]:
 
 	   puts "Local port is: [lindex [$u configure -local] 1]"
 
-In  the case of  **-remote**, both  address and  port must  be fully
-specified.  The semantics, as is well known, is to tell the kernel \(a\)
-to forbid  sending to  any other destination,  and \(b\) to  discard all
-incoming packets sent by another source.
+In the case of **-remote**, both address and port must be fully specified.
+The semantics, as is well known, is to tell the kernel \(a\) to forbid sending
+to any other destination, and \(b\) to discard all incoming packets sent by
+another source.
+
+Both **-local** and **-remote** may also be specified for the port at the same
+time (the order being unimportant):
+
+ > set u [**udp new -local** _address\_port_ **-remote** _address\_port_]
 
 ## Sending a Message
 
@@ -161,18 +168,19 @@ Sending is done, unsurprisingly, with the **send** verb:
 
 where _dest\_addr\_port_ is a pair as above.
 
-Its  blocking  semantics is  that  of  the underlying  send\(\)/sendto\(\)
-system calls:  it typically  returns immediately, though  the hardware
-may buffer the data for some time, and delivery is not guaranteed. The
-_payload_  is interpreted  as a  byte  array that  holds the  entire
-content of the UDP message to send.
+Its blocking semantics is that of the underlying send\(\)/sendto\(\) system
+calls: it typically returns immediately, though the hardware may buffer the
+data for some time, and delivery is not guaranteed. The _payload_ is
+interpreted as a byte array that holds the entire content of the UDP message
+to send.
 
-The destination parameter can be omitted if the endpoint has been created
-with the **-remote** option \(connected mode\).
+The destination parameter can be omitted if the endpoint has been created with
+the **-remote** option \(connected mode\).
 
 ## Receiving a message asynchronously
 
-Asynchronous \(i.e. event-driven\) message reception is done by specifying a listener callback to **new/create** or **configure**:
+Asynchronous \(i.e. event-driven\) message reception is done by specifying a
+listener callback to **new/create** or **configure**:
 
  > $u **configure -listener** _command\_prefix_
 
@@ -182,30 +190,29 @@ metadata:
 
  > \{\*\}_command\_prefix_ $u _payload_ _metadata\_dict_
 
-where  _payload_  is   the  byte  array  of  the   UDP  payload  and _metadata\_dict_ is a dict containing at least two options:
+where _payload_ is the byte array of the UDP payload and _metadata\_dict_ is a
+dict containing at least two options:
 
- >   **-remote** _address\_port_
-
+ >   **-remote** _address\_port_  
  >   **-local** _address\_port_
 
-When read from options or  metadata, all address components apart from
-"\*" are returned in numeric form; no reverse DNS is ever performed.
+When read from options or metadata, all address components apart from "\*" are
+returned in numeric form; no reverse DNS is ever performed.
 
-Note  that _-local_  may carry  more information  than  a configured
-_-local_ where the address part  is "\*", by identifying which of the
-system's several interfaces was targeted.
+Note that **-local** may carry more information than a configured **-local**
+where the address part is "\*", by identifying which of the system's several
+interfaces was targeted.
 
-Also note  that  _command\_prefix_  is  a single  command,  possibly  with
-arguments, that  will be  expanded on invocation  \(hence it must  be a
-proper list\);  it is  \*not\* an arbitrary  script as in  Tk's **bind_
-tradition.
+Also note that _command\_prefix_ is a single command, possibly with arguments,
+that will be expanded on invocation \(hence it must be a proper list\); it is
+\*not\* an arbitrary script as in Tk's **bind** tradition.
 
-When _command\_prefix_ is the empty  list \(which is the default\), the
-notifier gives up  interest in the underlying UDP  socket; this allows
-to  keep the  port  bound while  letting  the OS  buffer any  incoming
-packets  \(up  to  a   configurable  limit\)  without  any  script-level
-handling, while  leaving the  event loop active.   This is  similar to
-setting a **fileevent** on a channel to the empty string.
+When _command\_prefix_ is the empty list \(which is the default\), the
+notifier gives up interest in the underlying UDP socket; this allows to keep
+the port bound while letting the OS buffer any incoming packets \(up to a
+configurable limit\) without any script-level handling, while leaving the
+event loop active.  This is similar to setting a **fileevent** on a channel to
+the empty string.
 
 ## Receiving a message synchronously
 
@@ -213,15 +220,15 @@ Synchronous message reception is done with the **recv** verb:
 
  > set payload [$u **recv** _metadata_dict_var_]
 
-The payload is returned as a byte array, and the variable passed as argument receives the metadata dict just described.
+The payload is returned as a byte array, and the variable passed as argument
+receives the metadata dict just described.
 
 ## Advanced features
 
 The following few verbs and options control extra IP features that are
 typically useful in popular UDP applications like media streaming:
 
- > $u **configure -sendbuffer** _buffersize_
-
+ > $u **configure -sendbuffer** _buffersize_  
  > $u **configure -receivebuffer** _buffersize_
 
 Set the OS's send \(resp. receive\) buffer sizes to the given values \(in bytes\).
@@ -237,33 +244,36 @@ Leaves the same multicast group with or without source membership.
 
  > set u [**udp new -reuse 1**]
 
-Sets the SO\_REUSEADDR socket option, so that multiple processes may bind to the same local port and interface, and receive the same packets. Creation-time only.
+Sets the SO\_REUSEADDR socket option, so that multiple processes may bind to
+the same local port and interface, and receive the same packets. Creation-time
+only.
 
  > $u **configure -ttl** _ttl_
 
-Sets the TTL of subsequent outgoing packets. Some operating systems typically reduce the default TTL to one for multicast packets; this override may thus come in handy.
+Sets the TTL of subsequent outgoing packets. Some operating systems typically
+reduce the default TTL to one for multicast packets; this override may thus
+come in handy.
 
 # Rejected Alternatives
 
- * Token-based API \(like for channels\) instead of
-   commands: would need  
-   extra machinery \(a new Tcl\_ObjType\). Moreover, the command style 
-   gives reflection for free: a simple proc can emulate an UDP endpoint,   
-   and is compatible with all OO schemes.
+ * Token-based API \(like for channels\) instead of commands: would need extra
+   machinery \(a new Tcl\_ObjType\). Moreover, the command style gives
+   reflection for free: a simple proc can emulate an UDP endpoint, and is
+   compatible with all OO schemes.
 
- * Address\+Port pairs as dicts or
-   urls: would hamper performance for no 
-   added value
+ * Address\+Port pairs as dicts or urls: would hamper performance for no added
+   value
 
- * Listener as specific subcommand instead of
-   option: R/W semantics is 
-   actually that of an option; a subcommand would preclude the direct 
-   specification of the listener on creation ; analogy with the -command 
-   of **fcopy**, **http**, or Tk widgets. 
+ * Listener as specific subcommand instead of option: R/W semantics is
+   actually that of an option; a subcommand would preclude the direct
+   specification of the listener on creation; analogy with the -command of
+   **fcopy**, **http**, or Tk widgets.
 
 # Sources of Inspiration
 
-This TIP builds on experience with previous attempts at UDP extensions: TclUDP, ceptcl, Duft, along with intensive practice with unpublished work, and borrows ideas from all of them.
+This TIP builds on experience with previous attempts at UDP extensions:
+TclUDP, ceptcl, Duft, along with intensive practice with unpublished work, and
+borrows ideas from all of them.
 
 # Copyright
 
