--- a/tip/409.md
+++ b/tip/409.md
@@ -128,8 +128,8 @@ while all the other options may be specified _both_ on creation or through
 
 The first two creation-only options have the following syntax:
 
- > set u [**udp new** ?**-local** _address_port_? ]  
- > set u [**udp new** ?**-remote** _address_port_? ]
+ > set u [**udp new** ?**-local** _address\_port_? ]  
+ > set u [**udp new** ?**-remote** _address\_port_? ]
 
 where _address\_port_ pairs are represented as 2-element Tcl lists.
 
@@ -218,7 +218,7 @@ the empty string.
 
 Synchronous message reception is done with the **recv** verb:
 
- > set payload [$u **recv** _metadata_dict_var_]
+ > set payload [$u **recv** _metadata\_dict\_var_]
 
 The payload is returned as a byte array, and the variable passed as argument
 receives the metadata dict just described.
