Editorial cleanup of 281

--- a/tip/281.md
+++ b/tip/281.md
@@ -18,19 +18,20 @@ system errors to be returned to scripts.
 # Rationale
 
 The current method for handling of system errors is done via the
-_Tcl\_PosixError\(\)_ API call. Its job is to grab the value of _errno_ and
+`Tcl_PosixError()` API call. Its job is to grab the value of _errno_ and
 format it for display to a script within the **errorCode** special variable.
 
 Unfortunately, not all such system errors are left in _errno_ and on
 Windows, not all information can be translated effectively to a POSIX error
 code without loss of valuable information to the user.
 
-On UNIX, _gethostbyname\(\)_ for example, leaves its errors in _h\_errno_
-<http://www.opengroup.org/onlinepubs/009695399/basedefs/netdb.h.html> . If we
-look at our use of _gethostbyname\(\)_ in unix/tclUnixChan.c for the
-_CreateSocketAddress\(\)_ function, you'll see we are setting _errno_ to a
-wrong code rather than retrieving the proper error information defined in
-_netdb.h_.
+On UNIX, `gethostbyname()` for example, leaves its errors in
+_h\_errno_ (as [documented in the relevant part of the POSIX
+specification](http://www.opengroup.org/onlinepubs/009695399/basedefs/netdb.h.html)). If
+we look at our use of `gethostbyname()` in unix/tclUnixChan.c for the
+`CreateSocketAddress()` function, you'll see we are setting _errno_ to
+a wrong code rather than retrieving the proper error information
+defined in `netdb.h`.
 
 An example of the current mistranslation would be:
 
@@ -46,12 +47,13 @@ And on Windows:
 	% set errorCode
 	POSIX EINVAL {invalid argument}
 
-Notice that the two are different as well as wrong. EHOSTUNREACH is a routing
-error at the IP level and is returned by connect\(\), send\(\).. etc., not by
-gethostbyname\(\). For windows, the error translation function
-TclWinConvertWSAError\(\) sets _errno_ to EINVAL for a WSAHOST\_NOT\_FOUND even
-though the code in CreateSocketAddress\(\) appears to set errno to EHOSTUNREACH.
-What I would like to see is the following \(on all platforms\):
+Notice that the two are different as well as wrong. `EHOSTUNREACH` is
+a routing error at the IP level and is returned by `connect()`,
+`send()`, etc., not by `gethostbyname()`. For windows, the error
+translation function `TclWinConvertWSAError()` sets _errno_ to
+`EINVAL` for a `WSAHOST_NOT_FOUND` even though the code in
+`CreateSocketAddress()` appears to set errno to EHOSTUNREACH.  What I
+would like to see is the following \(on all platforms\):
 
 	% socket foo.example.com 1234
 	couldn't open socket: No such host is known
@@ -69,14 +71,15 @@ errors that Expect could return regarding how the Console API debugger was
 unable to function, but the error path is only limited to POSIX pipe errors
 rather than anything specific.
 
-I tried to make a facility to manage these specific errors in a controlled way
-using a message catalog
-<http://www.pobox.com/~davygrvy/expect-src/win/expWinErr.mc>  to compile into
-the expect dll a "windows"-ish style of error management along with a specific
-"EXPECT" formatter, see ExpWinError\(\) [last function in file]
-<http://www.pobox.com/~davygrvy/expect-src/win/expWinUtils.cpp> . I used the
-"customer" bit in the **errorCode** as a key to forward to the "WINDOWS"
-formatter and thought it was quite smart of me.
+I tried to make a facility to manage these specific errors in a
+controlled way [using a message
+catalog](http://www.pobox.com/~davygrvy/expect-src/win/expWinErr.mc)
+to compile into the expect dll a "windows"-ish style of error
+management along with a specific "EXPECT" formatter, see
+`ExpWinError()` ([the last function in the
+file](http://www.pobox.com/~davygrvy/expect-src/win/expWinUtils.cpp)). I
+used the "customer" bit in the **errorCode** as a key to forward to
+the "WINDOWS" formatter and thought it was quite smart of me.
 
 But alas... the POSIX restriction was not to be bypassed in a manageable
 manner.
