Substantial revision to 390

--- a/tip/390.md
+++ b/tip/390.md
@@ -1,10 +1,11 @@
 # TIP 390: A Logging API for Tcl
-	Author:		Jeff Rogers <dvrsn@diphi.com>
-	State:		Draft
-	Type:		Project
-	Tcl-Version:	8.7
-	Created:	27-Oct-2011
-	Vote:		Pending
+	Author:         Jeff Rogers <dvrsn@diphi.com>
+	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
+	State:          Draft
+	Type:           Project
+	Tcl-Version:    8.7
+	Created:        27-Oct-2011
+	Vote:           Pending
 	Post-History:	
 -----
 
@@ -26,41 +27,102 @@ channel.
 
 # Specification
 
- 1. **Tcl\_Log**\(_interp_, _level_, _message_, ...\)
+There shall be a logger associated with each Tcl interpreter, and a separate
+global logger. As the global logger may be used by multiple threads at once,
+it shall be protected by an appropriate mutex; it may only be used from C
+code. Interpreter-specific loggers will be exposed within those interpreters.
 
-	 > This is the main C api call; it logs the formatted message at the specified
-   loglevel. If interp is specified, it operates within the context of that
-   interp; if NULL then it logs in a maner not associated with any interp.
+## Tcl C API
 
- 2. **Tcl\_SetLogLevel**\(_interp_, _level_\)
+ 1. void **Tcl\_Log**\(Tcl\_Interp _\*interp_, Tcl\_LogLevel _level_, const
+    char _\*message_, ...\)
 
-	 > Instructs the logging system to set the loglevel to the given value.  Legal
-   levels are TCL\_LOG\_DEV, TCL\_LOG\_DEBUG, TCL\_LOG\_INFO, TCL\_LOG\_NOTICE,
-   TCL\_LOG\_WARNING, TCL\_LOG\_ERROR, TCL\_LOG\_FATAL, TCL\_LOG\_BUG
+    This is the main C api call; it logs the formatted message at the
+    specified log level. If _interp_ is specified, it operates within the
+    context of that interp; if NULL then it logs in a maner not associated
+    with any interpreter.
 
- 3. **Tcl\_SetLogHandler**\(_interp_, _logHandler_\)
+ 2. void **Tcl\_SetLogLevel**\(Tcl\_Interp _\*interp_, Tcl\_LogLevel _level_\)
 
-		    struct Tcl_LogHandler {
-		        Tcl_LogHandlerProc(interp, level, message, ...)
-		        Tcl_SetLogLevelProc(interp, level)
-		    }
+    Instructs the logging system to set the logging level to the given value
+    for the logger associated with the given _interp_ (or the global logger
+    when _interp_ is NULL).  Legal levels (from lowest to highest) are
+    `TCL_LOG_DEV`, `TCL_LOG_DEBUG`, `TCL_LOG_INFO`, `TCL_LOG_NOTICE`,
+    `TCL_LOG_WARNING`, `TCL_LOG_ERROR`, `TCL_LOG_FATAL`, `TCL_LOG_BUG`.
 
-	 > Installs a new loghandler for a specified interp or globally.  If no log
-   handler is installed, the default action is to print the formatted message
-   on standard error if the message level is equal to or greater than the
-   loglevel; in the context of an interp the default action is to call the
-   configured log handler \(which does the same thing by default\)
+ 3. Tcl\_LogLevel **Tcl\_GetLogLevel**\(Tcl\_Interp _\*interp_\)
+ 
+    Retrieves the current logging level for the logger associated with the
+    given _interp_ (or the global logger when _interp_ is NULL). The result
+    will be one of the values documented above.
 
- 4. **interp logger** ?_loggerCommandFragment_?
+ 4. int **Tcl\_LogLevelEnabled**\(Tcl\_Interp _\*interp_, Tcl\_LogLevel _level_\)
+ 
+    Returns a boolean value that says whether logging at _level_ is enabled for
+    the logger associated with the given _interp_ (or the global logger when
+    _interp_ is NULL). This is useful when the calculation of the arguments to
+    **Tcl\_Log** is expensive.
 
-	 > Gets or sets the log handler for an interp.  The log handler will have
-   these arguments appended on invoke: _level message args_
+ 5. void **Tcl\_SetLogHandler**\(Tcl\_Interp _\*interp_, const Tcl\_LogHandler _\*logHandler_, ClientData _clientData_\)
 
- 5. **log** _level message_
+    Where `Tcl_LogHandler` is defined as (approximately):
 
-	 > Tcl equivalent of **Tcl\_Log**.
+	    typedef struct Tcl_LogHandler {
+	        Tcl_LogHandlerProc *logHandlerProc;
+	        Tcl_SetLogLevelProc *setLogLevelProc;
+	        Tcl_FreeLogHandlerProc *freeLogHandlerProc;
+	    } Tcl_LogHandler;
+
+	    int Tcl_LogHandlerProc(ClientData clientData, Tcl_Interp *interp,
+	            Tcl_LogLevel level, Tcl_Obj *message);
+	    void Tcl_SetLogLevelProc(ClientData clientData, Tcl_Interp *interp,
+	            Tcl_LogLevel level);
+	    void Tcl_FreeLogHandlerProc(ClientData clientData);
+
+    Installs a new log handler for a specified _interp_ or globally.  If no
+    log handler is installed, the default action is to print the formatted
+    message on standard error if the message level is equal to or greater than
+    the loglevel; in the context of a particular interpreter the default
+    action is to call the configured log handler \(which does the same thing
+    by default\). The log handler callback must be non-NULL; it returns a
+    standard Tcl result code, but if the global log handler returns non-TCL_OK
+    then Tcl will panic. The set log level callback can be NULL if the log
+    handler wishes to be notified of the current logging level.
+
+    The _clientData_ is an arbitrary pointer that is passed through by Tcl
+    unexamined; if the free log handler callback is non-NULL, it will be
+    called to release whatever the _clientData_ points to when the log handler
+    is changed.
+
+    Note that when a logging event happens and is of a level high enough to be
+    processed, the _message_ and subsequent arguments will be formatted into a
+    `Tcl_Obj*` value prior to delivery to the log handler (as if with
+    `Tcl_ObjPrintf`).
+
+## Tcl Script API
+
+The corresponding Tcl API is:
+
+ 1. **interp logger** ?_loggerCommandFragment_?
+
+    Gets or sets the log handler for the executing interpreter.  The log
+    handler (which will be a list of at least one element) will have these
+    arguments appended on invoke: _level message args_
+
+ 2. **interp loglevel** ?_level_?
+ 
+    Gets or sets the current logging level for the executing interpreter. The
+    _level_, if provided, must be one of: **dev**, **debug**, **info**,
+    **notice**, **warning**, **error**, **fatal**, or **bug**; they correspond
+    to the levels defined above for **Tcl\_SetLogLevel**.
+
+ 3. **log** _level message ..._
+
+    Tcl equivalent of `Tcl_Log()`; if _level_ is at or above the log level of
+    the current inerpreter, _message_ will be formatted with the remaining
+    arguments (as in `format`) and then sends them to the interpreter's
+    configured logger.
 
 # Copyright
 
 This document has been placed in the public domain.
-
