Editorial tweaking to 384

--- a/tip/384.md
+++ b/tip/384.md
@@ -29,13 +29,17 @@ monitoring capabilities or instances on which they have been disabled.
 Platform-specific APIs which should be supported by the final implementation
 \(list to be extended\):
 
- * inotify<http://en.wikipedia.org/wiki/Inotify>  \(Linux\)
+ * [inotify](http://en.wikipedia.org/wiki/Inotify) \(Linux\)
 
- * kqueue<http://en.wikipedia.org/wiki/Kqueue>  \(BSD\)
+ * [kqueue](http://en.wikipedia.org/wiki/Kqueue) \(BSD\)
 
- * FSEvents<http://en.wikipedia.org/wiki/FSEvents>  \(Mac OS X\)
+ * [FSEvents](http://en.wikipedia.org/wiki/FSEvents) \(Mac OS X\)
 
- * TWAPI <http://twapi.magicsplat.com/disk.html#begin_filesystem_monitor>  \(Windows\)
+ * TWAPI
+   <http://twapi.magicsplat.com/disk.html#begin_filesystem_monitor>
+   based ultimately on
+   [ReadDirectoryChangesW](https://docs.microsoft.com/en-us/windows/desktop/api/winbase/nf-winbase-readdirectorychangesw)
+   \(Windows\)
 
 # Proposal
 
@@ -52,23 +56,26 @@ removes an existing callback from the given path.
 The calling conventions for _callback_ and the syntax of _filter_ are yet
 to be determined.
 
+If the platform does not support watching for the given _filter_ on the
+given _path_, **file monitor** will produce an error.
+
 # Rejected Alternatives
 
 The **file** command was chosen over **fileevent** and **chan event**,
 because the object to be monitored is passed by name and not as an open
 channel.
 
-As an API, FAM<http://en.wikipedia.org/wiki/File_alteration_monitor>  would
+As an API, [FAM](http://en.wikipedia.org/wiki/File_alteration_monitor) would
 have been a more portable alternative, but it requres a daemon to be running
 on the local machine and it requires linking against a lib that is licensed
 under the LGPL. It might be possible to support FAM as a compile time
 alternative to the system's native notification method. There exists a
 serverless implementation of a subset of the FAM API, called
-Gamin<http://people.gnome.org/~veillard/gamin/index.html> , but that's also
+[Gamin](http://people.gnome.org/~veillard/gamin/index.html), but that's also
 licensed under the LGPL.
 
 There exists a Tcl extension for
-inotify<https://sourceforge.net/projects/tcl-inotify/> , but it is licensed
+[inotify](https://sourceforge.net/projects/tcl-inotify/), but it is licensed
 under the GPL and it's script level API is too close to the inotify primitives
 to serve as the basis of a cross-platform abstraction for such
 notifications. But it might be a good base for a scripted prototype to sort
@@ -83,4 +90,3 @@ projects other than Tcl can use it as well.
 # Copyright
 
 This document has been placed in the public domain.
-
