TIP #541: Add reason why the TIP targets 8.6

--- a/tip/541.md
+++ b/tip/541.md
@@ -32,6 +32,8 @@ If <i>newIndex</i> is supplied, sets the combobox value to the element at positi
 
 See the [`bug-2858503fff`](https://core.tcl-lang.org/tk/timeline?r=bug-2858503fff&unhide) branch. This branch includes implementation, updated documentation and new tests.
 
+The branch targets 8.6 since there is no danger of incompatibility: the new feature was an error case so far.
+
 # Copyright
 
 This document has been placed in the public domain.
