Fix encoding names, more clarification

--- a/tip/542.md
+++ b/tip/542.md
@@ -30,7 +30,7 @@ TODO
 
 This document proposes:
 
- * Add new encodings "utf-16", "utf-16le", "utf-16le", "ucs-2", "ucs-2le", "ucs-2le".
+ * Add new encodings "utf-16", "utf-16le", "utf-16be", "ucs-2", "ucs-2le", "ucs-2be".
 
  * Allow Tcl to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4.
    In the latter mode, the Tcl_UniChar type becomes a 32-bit type, but the stub entries for
@@ -72,11 +72,11 @@ of Tcl with one exception: In Androwish the "unicode" encoding is 32-bit, in Tcl
 continues to be 16-bit, an alias for "utf-16". At the C-API level, it's upwards compatible with
 Tcl 8.6, except for the following 5 functions: Tcl\_NewUnicodeObj(), Tcl\_SetUnicodeObj(),
 Tcl\_GetUnicode(), Tcl\_GetUnicodeFromObj() and Tcl\_AppendUnicodeToObj(). Using any of those 5 functions
-will result in a panic.
+will result in a panic if the extension is compiled in a different mode than Tcl.
 
 # Caveats
 
- * If Tcl is compiled with -DTCL\_UTF\_MAX=3, extensions compiled with -DTCL\_UTF\_MAX=4 and use the
+ * If Tcl is compiled with -DTCL\_UTF\_MAX=3, extensions compiled with -DTCL\_UTF\_MAX=4 and which use the
    Tcl\_UniChar type won't work. This will result in a panic, as soon as one of the 32-bit
    Tcl\_UniChar functions is called.
 
