More burdensome, but more desirable format

--- a/tip/543.md
+++ b/tip/543.md
@@ -1,4 +1,4 @@
-# TIP 543: Eliminate TCL_INTERP_DESTROYED flag value
+# TIP 543: Eliminate TCL\_INTERP\_DESTROYED flag value
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
@@ -11,12 +11,12 @@
 
 # Abstract
 
-This TIP proposes the elimination of the `TCL_INTERP_DESTROYED` flag.
+This TIP proposes the elimination of the **TCL\_INTERP\_DESTROYED** flag.
 
 # History
 
 Variable traces arrived no later than release Tcl 5.0 (1991). Early on,
-no later than release Tcl 6.1 (1991), a flag value `TCL_INTERP_DESTROYED`
+no later than release Tcl 6.1 (1991), a flag value **TCL\_INTERP\_DESTROYED**
 was defined to pass to each trace-handling `Tcl_VarTraceProc` routine to
 signal that deletion of the interpreter was underway. This was a sign
 that script evaluation should not be attempted with the interpreter.
@@ -24,13 +24,13 @@ that script evaluation should not be attempted with the interpreter.
 The routine `Tcl_InterpDeleted`() arrived in release Tcl 7.5 (1996).
 It is a supported, public mechanism to determine whether the deletion
 of any interpreter has begun, exactly the same status the
-`TCL_INTERP_DESTROYED` flag is intended to signal. At that time, there
+**TCL\_INTERP\_DESTROYED** flag is intended to signal. At that time, there
 was no longer any need for the flag to achieve the needed function.
 Any `Tcl_VarTraceProc` routine may call `Tcl_InterpDeleted`() to test
 any interp to see if script evaulation should not be attempted.
 
 Namespaces were added in release Tcl 8.0 (1997). With their addition,
-the setting of `TCL_INTERP_DESTROYED` became buggy during namespace
+the setting of **TCL\_INTERP\_DESTROYED** became buggy during namespace
 destructions, sometimes set when it should not be, sometimes cleared
 when it should not be. A segfault arising from this was reported in
 [Tk ticket 605121](https://core.tcl-lang.org/tk/tktview/605121) (2002),
@@ -38,28 +38,28 @@ leading to a bug fix.
 
 A new facility for tracing operations on commands with `Tcl_TraceCommand`()
 and friends arrived in release Tcl 8.4 (2002). These routines were documented
-to also use the `TCL_INTERP_DESTROYED` flag. That documentation was false.
+to also use the **TCL\_INTERP\_DESTROYED** flag. That documentation was false.
 The false claim was noted in 
 ticket [2039178](https://core.tcl-lang.org/tcl/tktview/2039178) (2008)
-and corrected in 2014, replacing claims about `TCL_INTERP_DESTROYED` with
+and corrected in 2014, replacing claims about **TCL\_INTERP\_DESTROYED** with
 advice on the need to make calls to `Tcl_InterpDeleted`().
 
 A fix for Tcl tickets [1337229](https://core.tcl-lang.org/tcl/tktview/1337229)
 and [1338280](https://core.tcl-lang.org/tcl/tktview/1338280) (2005)
 included a refactoring of namespace variable destruction into a new
 internal routine `TclDeleteNamesapceVars`(). The new routine was created
-improperly failing to pass `TCL_INTERP_DESTROYED` when it should. This
+improperly failing to pass **TCL\_INTERP\_DESTROYED** when it should. This
 defect was eventually noticed as a memory leak reported in 
 ticket [1706140](https://core.tcl-lang.org/tcl/tktview/1706140). (2007)
 
 At that point Tcl's internals were all converted to stop making use of the
-`TCL_INTERP_DESTROYED` flag, and an RFE note to TIP its elimination was
+**TCL\_INTERP\_DESTROYED** flag, and an RFE note to TIP its elimination was
 recorded in ticket [1714505](https://core.tcl-lang.org/tcl/tktview/1714505).
 Here is that TIP.
 
 # Rationale
 
-The support of the `TCL_INTERP_DESTROYED` flag was buggy over longer
+The support of the **TCL\_INTERP\_DESTROYED** flag was buggy over longer
 periods of time than it was correct. It is unnecessary. We're better
 off without it, converting all users to use of `Tcl_InterpDeleted`().
 
