more format trial and error

--- a/tip/543.md
+++ b/tip/543.md
@@ -17,11 +17,11 @@ This TIP proposes the elimination of the **TCL\_INTERP\_DESTROYED** flag.
 
 Variable traces arrived no later than release Tcl 5.0 (1991). Early on,
 no later than release Tcl 6.1 (1991), a flag value **TCL\_INTERP\_DESTROYED**
-was defined to pass to each trace-handling `Tcl_VarTraceProc` routine to
+was defined to pass to each trace-handling *Tcl_VarTraceProc* routine to
 signal that deletion of the interpreter was underway. This was a sign
 that script evaluation should not be attempted with the interpreter.
 
-The routine `Tcl_InterpDeleted`() arrived in release Tcl 7.5 (1996).
+The routine **Tcl_InterpDeleted**() arrived in release Tcl 7.5 (1996).
 It is a supported, public mechanism to determine whether the deletion
 of any interpreter has begun, exactly the same status the
 **TCL\_INTERP\_DESTROYED** flag is intended to signal. At that time, there
