--- a/tip/543.md
+++ b/tip/543.md
@@ -26,7 +26,7 @@ It is a supported, public mechanism to determine whether the deletion
 of any interpreter has begun, exactly the same status the
 **TCL\_INTERP\_DESTROYED** flag is intended to signal. At that time, there
 was no longer any need for the flag to achieve the needed function.
-Any `Tcl_VarTraceProc` routine may call `Tcl_InterpDeleted`() to test
+Any *Tcl_VarTraceProc* routine may call **Tcl_InterpDeleted**() to test
 any interp to see if script evaulation should not be attempted.
 
 Namespaces were added in release Tcl 8.0 (1997). With their addition,
@@ -36,23 +36,23 @@ when it should not be. A segfault arising from this was reported in
 [Tk ticket 605121](https://core.tcl-lang.org/tk/tktview/605121) (2002),
 leading to a bug fix. 
 
-A new facility for tracing operations on commands with `Tcl_TraceCommand`()
+A new facility for tracing operations on commands with **Tcl\_TraceCommand**()
 and friends arrived in release Tcl 8.4 (2002). These routines were documented
 to also use the **TCL\_INTERP\_DESTROYED** flag. That documentation was false.
 The false claim was noted in 
 ticket [2039178](https://core.tcl-lang.org/tcl/tktview/2039178) (2008)
 and corrected in 2014, replacing claims about **TCL\_INTERP\_DESTROYED** with
-advice on the need to make calls to `Tcl_InterpDeleted`().
+advice on the need to make calls to **Tcl_InterpDeleted**().
 
 A fix for Tcl tickets [1337229](https://core.tcl-lang.org/tcl/tktview/1337229)
 and [1338280](https://core.tcl-lang.org/tcl/tktview/1338280) (2005)
 included a refactoring of namespace variable destruction into a new
-internal routine `TclDeleteNamesapceVars`(). The new routine was created
+internal routine **TclDeleteNamesapceVars**(). The new routine was created
 improperly failing to pass **TCL\_INTERP\_DESTROYED** when it should. This
 defect was eventually noticed as a memory leak reported in 
 ticket [1706140](https://core.tcl-lang.org/tcl/tktview/1706140). (2007)
 
-At that point Tcl's internals were all converted to stop making use of the
+At that point Tcl internals were all converted to stop making use of the
 **TCL\_INTERP\_DESTROYED** flag, and an RFE note to TIP its elimination was
 recorded in ticket [1714505](https://core.tcl-lang.org/tcl/tktview/1714505).
 Here is that TIP.
@@ -60,8 +60,8 @@ Here is that TIP.
 # Rationale
 
 The support of the **TCL\_INTERP\_DESTROYED** flag was buggy over longer
-periods of time than it was correct. It is unnecessary. We're better
-off without it, converting all users to use of `Tcl_InterpDeleted`().
+periods of time than it was correct. It is unnecessary. We are better
+off without it, converting all users to use of **Tcl_InterpDeleted**().
 
 # Specification
 
