--- a/tip/543.md
+++ b/tip/543.md
@@ -73,12 +73,13 @@ In Tcl 8.7, mark the use of the flag as deprecated in code and documentation.
 # Compatibility
 
 Existing *Tcl_VarTraceProc* that use the **TCL\_INTERP\_DESTROYED** flag
-will need to be converted to use **Tcl_InterpDelted**() to work with
+will need to be converted to use **Tcl_InterpDeleted**() to work with
 Tcl 9. This includes Tk 8.7.
 
 # Reference Implementation
 
-Will be placed on branch [tip-543](/tcl/timeline?t=tip-543).
+Will be placed on
+branch [tip-543](https://core.tcl-lang.org/tcl/timeline?t=tip-543).
 
 # Copyright
 
